# weather-api

./: .env  .env.example  README.md  pyproject.toml
src/: main.py
src/core/: config.py
src/models/: weather.py
src/services/: weather.py
