[project]
name = "weather-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "mypy>=1.20.0",
    "pydantic-settings>=2.13.1",
    "redis>=7.4.0",
    "ruff>=0.15.8",
    "uvicorn>=0.42.0",
]
